<resources>
    <string name="app_name">Tasbeeh</string>
    <string name="add_new_tasbeeh">Add New Tasbeeh</string>
    <string name="title">Title</string>
    <string name="count_optional">Count (Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="edit_tasbeeh">Edit Tasbeeh</string>
    <string name="count">Count</string>
    <string name="update">Update</string>
    <string name="add_button">Add Button</string>
</resources>